Update and rename java.java to Grader.java